Bug 119814 - gtk3_kde5: filepicker causes more "UI freeze"
Summary: gtk3_kde5: filepicker causes more "UI freeze"
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.3
Keywords:
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2018-09-12 06:30 UTC by Michael Weghorn
Modified: 2018-09-21 13:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Patch to demonstrate how to reliably trigger the issue (1.07 KB, patch)
2018-09-12 06:34 UTC, Michael Weghorn
Details
gdb backtrace of the soffice process when "frozen state" has been reached (11.45 KB, text/plain)
2018-09-12 06:39 UTC, Michael Weghorn
Details
gdb backtrace of the lo_kde5filepicker process when "frozen state" has been reached (7.46 KB, text/plain)
2018-09-12 06:39 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2018-09-12 06:30:00 UTC
(This is another issue than bug 119685 even though the outcome is similar from user perspective.)

Version: 6.2.0.0.alpha0+
Build ID: 40069adbc225a6dd5d3431a7cd9f17986f6385de
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: en-GB (en_GB.UTF-8); Calc: threaded

Steps to reproduce:

1) start LibreOffice Writer with the "gtk3_kde5" VCL plugin, command:

SAL_USE_VCLPLUGIN=gtk3_kde5 ./instdir/program/soffice --writer

2) Try to save the document using "File" -> "Save as"

3) Repeat step 2 until the issue appears. (It just happens from time to time, but I'll attach a patch with a "sleep" that helps to reliably trigger the problem.)

Result:

The "Save as" dialog appears, but it cannot be interacted with, i.e. it's not possible to do anything, also not closing the dialog again. The only way to get out of the situation is to kill the process.
Comment 1 Michael Weghorn 2018-09-12 06:34:14 UTC
Created attachment 144808 [details]
Patch to demonstrate how to reliably trigger the issue

The attached patch adds a 'sleep' of 1 second at some place, so that the problem can reliably reproduced.
Note that opening the file dialog takes about 15-30 seconds now (expected, since the function is called multiple times), and then the described problem is present (UI freeze, no interaction possible).

For a properly working program, inserting a 'sleep' should not affect the basic functionality.
Comment 2 Michael Weghorn 2018-09-12 06:39:25 UTC
Created attachment 144809 [details]
gdb backtrace of the soffice process when "frozen state" has been reached
Comment 3 Michael Weghorn 2018-09-12 06:39:54 UTC
Created attachment 144810 [details]
gdb backtrace of the lo_kde5filepicker process when "frozen state" has been reached
Comment 4 Michael Weghorn 2018-09-12 11:07:25 UTC
Gerrit change to fix this: https://gerrit.libreoffice.org/#/c/60380/
Comment 5 Katarina Behrens (Inactive) 2018-09-12 11:51:50 UTC
*** Bug 119802 has been marked as a duplicate of this bug. ***
Comment 6 Katarina Behrens (Inactive) 2018-09-12 11:54:22 UTC
Considered confirmed given the duplicate report
Comment 7 Katarina Behrens (Inactive) 2018-09-12 12:41:50 UTC
Repro w/ the patch from comment #1
Comment 8 Commit Notification 2018-09-12 17:02:28 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e95930d96459cc653342e78617db9498255569d0

tdf#119814 Fix UI freeze with gtk3_kde5 filepicker

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-09-21 13:19:41 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4a242e736be63f4ca40963f6690d9f0619bad29a&h=libreoffice-6-1

tdf#119814 Fix UI freeze with gtk3_kde5 filepicker

It will be available in 6.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.