tdf#119814 Fix UI freeze with gtk3_kde5 filepicker

Previously, the loop inside 'runCommands()' was triggered
every time 'm_stdinNotifier' got activated.

This could lead to both the soffice and the separate
lo_kde5filepicker process blocking indefinitely, when
during the execution of 'KDE5FilePicker::execute()', the
processing of another event started which would then
be blocked in the 'readCommand()' call; finally causing
both processes to wait for input from stdin that would
never appear (s. backtrace attached to tdf#119814).

Since the loop inside 'runCommands()' runs until all
commands have been processed, it's sufficient to
start it once when 'm_stdinNotifier' is activated for the
first time.

Change-Id: Ie9180dbaf7e3f7ec033ad6d53fabe1b1ee363465
Reviewed-on: https://gerrit.libreoffice.org/60380
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit e95930d96459cc653342e78617db9498255569d0)
Reviewed-on: https://gerrit.libreoffice.org/60561
Tested-by: Michael Weghorn <m.weghorn@posteo.de>